# desafio-crawler

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: app.py  schema.py
docker/api/: Dockerfile.dev
license-templates/: LICENSE.txt
services/: quotes.py
