[tool.poetry]
name = "desafio-crawler"
version = "0.1.0"
description = ""
authors = ["Christian G. Semke"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
parsel = "^1.8.1"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
strawberry-graphql = "^0.211.1"
schedule = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
mypy = "^1.6.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
namespace_packages = true
plugins = 'strawberry.ext.mypy_plugin'

[tool.ruff]
line-length = 79
extend-select = [
    'Q',   # flake8-quotes
    'RUF', # ruff
    'C90', # mccabe
    'UP',  # pyupgrade
    'I',   # isort
    'D',   # docstrings
]
ignore = [
    'D105', # Missing docstring in magic method
    'D107', # Missing docstring in `__init__`
    'D205', # 1 blank line required between summary line and description
]
flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
target-version= "py311"

[tool.ruff.format]
quote-style = 'single'
